# catas

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: db.rs  handlers.rs  logger.rs  main.rs  routes.rs
src/handlers/: health.rs
src/handlers/users/: login.rs
src/models/users/: login.rs
