[package]
name = "catas"
version = "0.1.0"
edition = "2021"

[dependencies]
# Servidor web
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"

# Conector de base de datos SQLite con pooling
rusqlite = { version = "0.38.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"

# Logging y tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Libreria de manejo de errores genericos
anyhow = "1.0.100"

# Generacion de documentacion OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Hashing de contraseñas, muy seguro y moderno
argon2 = { version = "0.6.0-rc.5"}

# Generador de numeros aleatorios (de momento para la contraseña inicial del admin)
rand = "0.10.0-rc.6"

chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
